<resources>
    <string name="app_name" translatable="false">BMI Calculator</string>
    <string name="title_activity_main" translatable="false">Activity main</string>
    <!-- Developers -->
    <string name="name_abiso" translatable="false">Deobert Abiso</string>
    <string name="name_cuna" translatable="false">Jhona Belle Cuna</string>
    <string name="name_baldo" translatable="false">Juanito Lozano Baldo Jr.</string>
    <string name="name_bolar" translatable="false">Lance JO Bolar</string>
    <string name="name_ampan" translatable="false">Margart Augwie Ampan</string>
    <string name="name_collamar" translatable="false">Nichole Collamar</string>
    <!-- Placeholders -->
    <string name="placeholder_undefined" translatable="false">--</string>
    <string name="placeholder_zero" translatable="false">0</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis cursus in hac habitasse platea dictumst quisque sagittis. Platea dictumst vestibulum rhoncus est pellentesque elit. Non sodales neque sodales ut etiam. Neque egestas congue quisque egestas diam in arcu. Nam aliquam sem et tortor consequat id porta nibh venenatis.\n\nAccumsan sit amet nulla facilisi morbi tempus iaculis urna id. Enim praesent elementum facilisis leo vel fringilla est. Sed elementum tempus egestas sed sed. Scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Non blandit massa enim nec dui nunc mattis enim ut.</string>
    <!-- Company name -->
    <string name="facebook" translatable="false">Facebook</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="gmail" translatable="false">Gmail</string>
    <string name="github" translatable="false">Github</string>
    <string name="discord" translatable="false">Discord</string>
    <!-- Languages -->
    <string name="english" translatable="false">English</string>
    <string name="cebuano" translatable="false">Cebuano</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="filipino" translatable="false">Filipino</string>
    <string name="indonesian" translatable="false">Indonesian</string>
    <string name="japanese" translatable="false">Japanese</string>
    <string name="korean" translatable="false">Korean</string>
    <string name="thai" translatable="false">Thai</string>
    <string name="chinese" translatable="false">Chinese</string>
    <!-- Others / Unknown -->
    <string name="feedback_email" translatable="false">juanitobaldoaspler@gmail.com</string>
    <!-- Intro screen -->
    <string name="intro_title_1">Welcome!</string>
    <string name="intro_title_2">Calculate your BMI</string>
    <string name="intro_title_3">Let\'s get started!</string>
    <string name="intro_desc_1">Thank you for choosing this app. Here, we give services that will let you know the status of your BMI.</string>
    <string name="intro_desc_2">BMI is required in different purposes. So, we have created this app to compute it without any hassle.</string>
    <string name="intro_desc_3">To start with the computation of your BMI, you need to provide some of your personal information.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <!-- Main Screen -->
    <string name="label_height">Height (cm)</string>
    <string name="label_weight">Weight (kg)</string>
    <string name="label_age">Age (year)</string>
    <string name="label_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter">Enter</string>
    <string name="calculate">Calculate</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="enter_height">Enter your height</string>
    <string name="enter_weight">Enter your weight</string>
    <!-- BMI Classification -->
    <string name="under_weight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="over_weight">Overweight</string>
    <string name="obese_1">Obese 1</string>
    <string name="obese_2">Obese 2</string>
    <string name="obese_3">Obese 3</string>
    <!-- Drawer items -->
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="report_problem">Report a problem</string>
    <string name="terms_conditions">Terms &amp; conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_us">About us</string>
    <!-- Settings -->
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="language">Language</string>
    <string name="appearance">Appearance</string>
    <string name="theme_summary">Reduce the light</string>
    <string name="general">General</string>
    <string name="select_lang">Select language</string>
    <string name="lang_summary">Language of this app</string>
    <!-- Wala ko kabalo ani -->
    <string name="task_perf">Mobile App Dev Task Performance</string>
    <string name="documents">Documents</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <!-- Article headings -->
    <string name="who_are_we">Who are we?</string>
    <string name="what_we_do">What we do?</string>
    <string name="recommended">Recommended</string>
    <string name="explore">Explore</string>
    <string name="show_recommended">Show recommended</string>
    <string name="bmi_normal_msg">Your BMI is normal</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="show_tips">Show tips</string>
    <string name="tips">Tips</string>
    <!-- Error messages -->
    <string name="err_get_data_msg">There was an error getting the data.</string>
    <string name="no_internet">No internet!</string>
    <string name="no_internet_msg">We can\'t connect to the server. Please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="reload">Reload</string>
    <string name="info_used">Information collection and use</string>
    <string name="log_data">Log data</string>
    <string name="service_providers">Service providers</string>
    <string name="security">Security</string>
    <string name="g2tp_privacy_policy">G2TP privacy policy</string>
    <string name="header">Header</string>
    <string name="there_was_err">There was an error</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="delete_all">Delete all</string>
    <string name="clear_history">Clear history</string>

    <string name="delete_history">Delete history</string>
    <string name="delete_history_msg">Do you want to delete the history?</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="history_deleted">History deleted</string>
    <string name="developers">Developers</string>


</resources>