<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_cor_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/res_main_screen_bg"
    tools:context=".ui.home.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                android:elevation="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/bmiClassificationText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            android:text="@string/placeholder_undefined"
                            android:textAlignment="center"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/bmiText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder_undefined"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/showTipsBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="15dp"
                        android:enabled="false"
                        android:text="@string/show_tips"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:rowCount="2"
                android:columnCount="2">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="10dp"
                    android:elevation="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/forHeight"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center">
                            <TextView
                                android:id="@+id/heightText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/placeholder_undefined"
                                android:textAlignment="center"
                                android:textSize="22sp"
                                android:textStyle="bold"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_height"
                                android:textAlignment="center"
                                android:textSize="14sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageButton
                                android:id="@+id/heightMinusBtn"
                                android:layout_width="0dp"
                                android:layout_height="44dp"
                                android:layout_weight="1"
                                android:src="@drawable/ic_minus_outline"
                                android:background="?attr/selectableItemBackground"
                                tools:ignore="ContentDescription" />

                            <ImageButton
                                android:id="@+id/heightAddBtn"
                                android:layout_width="0dp"
                                android:layout_height="44dp"
                                android:layout_weight="1"
                                android:src="@drawable/ic_plus_outline"
                                android:background="?attr/selectableItemBackground"
                                tools:ignore="ContentDescription" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="10dp"
                    android:elevation="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/forWeight"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center">
                            <TextView
                                android:id="@+id/weightText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/placeholder_undefined"
                                android:textAlignment="center"
                                android:textSize="22sp"
                                android:textStyle="bold"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_weight"
                                android:textAlignment="center"
                                android:textSize="14sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageButton
                                android:id="@+id/weightMinusBtn"
                                android:layout_width="0dp"
                                android:layout_height="44dp"
                                android:layout_weight="1"
                                android:src="@drawable/ic_minus_outline"
                                android:background="?attr/selectableItemBackground"
                                tools:ignore="ContentDescription" />
                            <ImageButton
                                android:id="@+id/weightAddBtn"
                                android:layout_width="0dp"
                                android:layout_height="44dp"
                                android:layout_weight="1"
                                android:src="@drawable/ic_plus_outline"
                                android:background="?attr/selectableItemBackground"
                                tools:ignore="ContentDescription" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="30dp"
                android:enabled="false"
                android:text="@string/save"/>

        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>